fixed spacing between projects, working on populating project components using projects object instead of separate arrays

--- a/src/style.css
+++ b/src/style.css
@@ -209,7 +209,8 @@ a img:hover {
     flex-wrap: wrap;
     margin: 0px 3px;
     background-color: rgb(40, 48, 64);
-    min-height: 500px;
+    /* min-height: 500px; */
+    width: 50%;
 }
 
 .small img {
@@ -217,6 +218,11 @@ a img:hover {
     flex: 1 1;
     padding: 0;
     margin: 0;
+}
+
+.small p {
+    height: 180px;
+    overflow: scroll;
 }
 
 .big a {
